# sw_logger

./: .gitignore  Cargo.toml  LICENSE
example/: Metrics.xml  metrics.lua
server/: Cargo.toml
server/src/: args.rs  main.rs  values.rs
viewer/: Cargo.toml  Trunk.toml  index.html
viewer/src/: app.rs  graph.rs  main.rs  table.rs  values.rs
