[package]
name = "sw_logger_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws", "query"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.4", features = ["fs"] }
