[package]
name = "sw_logger_server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws", "query", "json"] }
base64 = "0.21"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.4", features = ["fs"] }
