[package]
name = "sw_logger_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.23.0"
egui_extras = "0.23.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
ewebsock = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
